fixed alignments

--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,8 @@
     height: 100%;
     margin-top: 50px;
     display: flex;
-    align-items: center;
     font-size: 1rem;
+    flex-direction: row-reverse;
 }
 
 @media only screen and (max-width: 800px) {
@@ -22,7 +22,8 @@
 .searchContainer {
     display: flex;
     flex-direction: column;
-
+    flex: 1;
+    align-items: center;
 }
 .input {
     display: flex;
@@ -43,4 +44,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex: 1;
 }
