--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,3 +1,7 @@
+
+@media only screen and (max-width: 800px) {
+
+}
 .card {
     display: flex;
     justify-content: center;
